# iot_webhook_server

./: .gitignore  Cargo.toml  README.md  database_create_tables.sql
examples/esp8266client/: esp8266client.ino
examples/python_async/: client.py
examples/python_raspberry_pi_dac/: client.py
script/: custom.js
src/: db.rs  device.rs  main.rs  schema.rs  server.rs
src/api/: device.rs  mod.rs  user.rs  webhook.rs
src/crypto/: hash.rs
src/models/: device.rs  mod.rs  user.rs
static/: background_video.css  google_font.css  main.css  offcanvas.css  style.css
templates/: basis.html  error404.html  login.html  profile.html  signup.html  welcome.html
